K8S/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: test
  labels:
    app: alpine
spec:
  containers:
  - name: alpine
    image: alpine:stable
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    command:
    - sleep
    - "3600" # Keeps the container running for 1 hour; adjust as needed

    ports:
    - containerPort: 81


  restartPolicy: Always
