K8S/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: test
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox:stable
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    command:
    - sleep
    - "3600" # Keeps the container running for 1 hour; adjust as needed

    ports:
    - containerPort: 80
      name: http

  restartPolicy: Always
