K8S/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-flask-app #deployment name
  namespace: default #the namespace
  labels:
    app: Deployment-flask-app # like a tag for the deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: amrkedra/flask-app:v3 #the used image
        resources:
          requests:
            cpu: 100m
            memory: 2000Mi
          limits:
            cpu: 100m
            memory: 2000Mi
        ports:
        - containerPort: 80
