K8S/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server
  namespace: default
  labels:
    app:  sql-server
spec:
  selector:
    matchLabels:
      app: sql-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
      - name: sql-server
        image:  mysql:oracle
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 33060
        - containerPort: 3306 

          name: sql-server
