K8S/pod.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: nginx
#   labels:
#     name: nginx
# spec:
#   containers:
#   - name: nginx
#     image: amrkedra/nginx:v2
#     resources:
#       limits:
#         memory: "1024Mi"
#         cpu: "500m"
#     ports:
#       - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: default
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi

    ports:
    - containerPort:  80
      name:  http
  
  tolerations:
    - key: "namespace"
      operator: "Equal"
      value: "default"
      effect: "NoExecute"
  
  nodeSelector: 
    performance: low
