K8S/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus
subsets:
- addresses:
  - ip: 192.168.1.103
  ports:
  - port: 9090
