K8S/flask-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: flask-service
  namespace: default

spec:
  selector:
    app: flask
  type: NodePort

  ports:
  - name: flask
    protocol: TCP
    port: 8090
    targetPort: 5000
    nodePort: 30010
