K8S/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis # Ensure this matches the Redis deployment namespace
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - port: 85
    targetPort: 6379
