K8S/service-external-connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: port
    protocol: TCP
    port: 1993
    targetPort: 9090
