K8S/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: default
  labels:
    app: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    resources:
      limits:
        cpu: 300m
        memory: 500Mi
      requests:
        cpu: 200m
        memory: 500Mi
    command:
    - sleep
    - "3600"
    ports:
    - containerPort: 85
      name: http-port # Renamed to make it more descriptive

---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-service
  namespace: default
spec:
  selector:
    app: ubuntu # This should match the label in the Pod
  type: ClusterIP
  ports:
  - name: ubuntu-service-port
    protocol: TCP
    port: 1001
    targetPort: 85
