K8S/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:

    - podSelector:
        matchLabels:
          app: flask

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: flask
